--- a/src/client/css/global.css
+++ b/src/client/css/global.css
@@ -5,6 +5,9 @@ h1 {
     font-size: 64px;
     font-weight: 50;
 }
+.hidden {
+    display: none;
+}
 .paragraph {
     padding-top: 5px;
     padding-bottom: 5px;
