--- a/src/client/css/global.css
+++ b/src/client/css/global.css
@@ -1,5 +1,6 @@
 * {
     font-family: Sans-serif;
+    overflow-wrap: normal;
 }
 h1 {
     font-size: 64px;
@@ -10,9 +11,8 @@ h1 {
 }
 .paragraph {
     padding-top: 5px;
-    padding-bottom: 5px;
     padding-left: 2%;
-    padding-right: 100%;
+    padding-right: 98%;
     background-color: rgba(230, 230, 230, 1);
 }
 img.center {
