--- a/src/client/css/global.css
+++ b/src/client/css/global.css
@@ -2,22 +2,61 @@
     font-family: Sans-serif;
     overflow-wrap: normal;
 }
-h1 {
+
+h1.title {
+    justify-self: center;
     font-size: 64px;
     font-weight: 50;
 }
+
 .hidden {
     display: none;
 }
+
+.content {
+    margin: auto;
+    width: 50%;
+    border: 3px solid black;
+}
+
 .paragraph {
-    position: relative;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    width: 100%;
+    box-sizing: border-box;
+    width: calc(100% - 10px);
+    background-color: rgba(230, 230, 230, 1);
+    margin: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
+
+.paragraph div {
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
+
+.border {
+    border: 1px solid black;
+}
+
+input.big {
+    width: 100px;
+    height: 30px;
+}
+
+div.item-box {
+    background-color: rgba(250, 250, 250, 1);
+    padding-left: 5px;
+}
+
+div.item-box:nth-child(odd) {
     background-color: rgba(230, 230, 230, 1);
 }
-.paragraph * {
-    margin-left: 10px;
+
+div.item-box p {
+    margin: 0;
+    padding: 3px;
 }
 
 img.center {
