--- a/src/client/css/global.css
+++ b/src/client/css/global.css
@@ -15,7 +15,7 @@ h1.title {
 
 .content {
     margin: auto;
-    width: 50%;
+    width: max(50%, 600px);
     border: 3px solid black;
 }
 
@@ -70,7 +70,7 @@ img.center {
 
 div.logbox {
     background-color: black;
-    height: 400px;
+    height: 300px;
     overflow-y: auto;
 }
 
