--- a/src/client/css/global.css
+++ b/src/client/css/global.css
@@ -45,6 +45,10 @@ input.big {
     height: 30px;
 }
 
+input.angry {
+    background-color: red;
+}
+
 div.item-box {
     background-color: rgba(250, 250, 250, 1);
     padding-left: 5px;
