--- a/src/client/css/global.css
+++ b/src/client/css/global.css
@@ -17,13 +17,13 @@ h1.title {
     margin: auto;
     width: max(50%, 600px);
     border: 3px solid black;
+    padding: 5px;
 }
 
 .paragraph {
     box-sizing: border-box;
-    width: calc(100% - 10px);
+    width: 100%;
     background-color: rgba(230, 230, 230, 1);
-    margin: 5px;
     padding-left: 10px;
     padding-right: 10px;
 
